artifacthub/library/general/requirednamespacequotas/1.0.0/samples/example_update_allowed.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-namespace-updated-with-quota
  labels:
    environment: "production"
